--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
       <main class="flex">
         <section>
           <article>
-            <h1 class="first-font">Architectural Design & Research</h1>
+            <h1 class="first-font">
+              Architectural Design
+              <br />
+              & Research
+            </h1>
             <p class="second-font">
               The unprecedented challenges of rapid urbanization, ecological
               instability, and widespread resource depletion are matched only by
@@ -24,7 +28,8 @@
               <a
                 href="https://www.freepik.com/free-photos-vectors/business"
                 target="_blank"
-                >Freepik</a
+                class="link"
+                ><b>Freepik</b></a
               >
             </p>
             <a
