--- a/index.html
+++ b/index.html
@@ -39,7 +39,26 @@
               >LEARN MORE</a
             >
           </article>
-          <article></article>
+          <article class="flex-cards">
+            <div class="cards">
+              <div class="card">
+                <img src="./assets/building.png" alt="" class="size"/>
+              </div>
+              <p class="text-card">Planning</p>
+            </div>
+            <div class="cards">
+              <div class="card">
+                <div></div>
+              </div>
+              <p class="text-card">Projects</p>
+            </div>
+            <div class="cards">
+              <div class="card">
+                <div></div>
+              </div>
+              <p class="text-card">Future</p>
+            </div>
+          </article>
         </section>
         <section></section>
       </main>
