--- a/index.html
+++ b/index.html
@@ -42,21 +42,33 @@
           <article class="flex-cards">
             <div class="cards">
               <div class="card">
-                <img src="./assets/building.png" alt="" class="size"/>
+                <img
+                  src="./assets/building.png"
+                  alt="build icon"
+                  class="size"
+                />
               </div>
-              <p class="text-card">Planning</p>
+              <p class="text-card first-font"><b>Planning</b></p>
             </div>
             <div class="cards">
               <div class="card">
-                <div></div>
+                <img
+                  src="./assets/architeture-project.png"
+                  alt="project architeture icon"
+                  class="size"
+                />
               </div>
-              <p class="text-card">Projects</p>
+              <p class="text-card first-font"><b>Projects</b></p>
             </div>
             <div class="cards">
               <div class="card">
-                <div></div>
+                <img
+                  src="./assets/future-building.png"
+                  alt="building icon"
+                  class="size"
+                />
               </div>
-              <p class="text-card">Future</p>
+              <p class="text-card first-font"><b>Future</b></p>
             </div>
           </article>
         </section>
