--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               an exponentially increasing capacity for innovation in
               architectural thought and production.
             </p>
-            <p>
+            <p class="space">
               Image from
               <a
                 href="https://www.freepik.com/free-photos-vectors/business"
@@ -35,44 +35,54 @@
             <a
               href="https://website69684.nicepage.io/Page-4.html?version=75a85f99-70b7-413d-be89-e024b016ca1a#"
               target="_blank"
-              class="button"
+              class="button orange-background"
               >LEARN MORE</a
             >
           </article>
           <article class="flex-cards">
             <div class="cards">
-              <div class="card">
+              <div class="card orange-background">
                 <img
                   src="./assets/building.png"
                   alt="build icon"
-                  class="size"
+                  class="size png"
                 />
               </div>
-              <p class="text-card first-font"><b>Planning</b></p>
+              <p class="text-card first-font">Planning</p>
             </div>
             <div class="cards">
-              <div class="card">
+              <div class="card orange-background">
                 <img
                   src="./assets/architeture-project.png"
                   alt="project architeture icon"
-                  class="size"
+                  class="size png"
                 />
               </div>
-              <p class="text-card first-font"><b>Projects</b></p>
+              <p class="text-card first-font">Projects</p>
             </div>
             <div class="cards">
-              <div class="card">
+              <div class="card orange-background">
                 <img
                   src="./assets/future-building.png"
                   alt="building icon"
-                  class="size"
+                  class="size png"
                 />
               </div>
-              <p class="text-card first-font"><b>Future</b></p>
+              <p class="text-card first-font">Future</p>
             </div>
           </article>
         </section>
-        <section></section>
+        <section class="orange-background">
+          <article>
+            <div>
+              <img
+                src="./assets/architect-designing-new-project_23-2148242953.jpg"
+                alt=""
+              />
+            </div>
+          </article>
+          <article></article>
+        </section>
       </main>
     </div>
     <footer>
