--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
             </div>
           </article>
         </section>
-        <section class="orange-background">
-          <article>
-            <div>
-              <img
-                src="./assets/architect-designing-new-project_23-2148242953.jpg"
-                alt=""
-              />
-            </div>
-          </article>
-          <article></article>
+        <section class="orange-background padding">
+          <div>
+            <img
+              src="./assets/architect-designing-new-project_23-2148242953.jpg"
+              alt=""
+              class="image"
+            />
+          </div>
+          <div></div>
+          <div></div>
         </section>
       </main>
     </div>
