--- a/template-2/index.html
+++ b/template-2/index.html
@@ -1,1 +1,48 @@
-<!-- https://nicepage.com/st/2881296/subscribe-and-follow-us-on-image-background-website-template -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Subscribe And Follow Us</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main class="container">
+      <section class="flex principal">
+        <h1 class="title">Subscribe and Flollow Us</h1>
+        <p>
+          Be part of the story and follow us on Twitter via and subscribe to the
+          newsletter for news and updates about our workshops
+        </p>
+        <form action="">
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Email"
+            required
+          />
+          <button>button</button>
+        </form>
+        <p>
+          Image from
+          <a href="https://www.freepik.com/" target="_blank" class="link"
+            >Freepik</a
+          >
+        </p>
+      </section>
+    </main>
+    <footer>
+      <p>
+        <a href="https://nicepage.com/website-templates" target="_blank"
+          >Website Templates</a
+        >
+        created with
+        <a href="https://nicepage.com/website-builder" target="_blank"
+          >Website Builder Software</a
+        >.
+      </p>
+    </footer>
+  </body>
+</html>
