--- a/template-1/index.html
+++ b/template-1/index.html
@@ -74,10 +74,32 @@
         </section>
         <section class="orange-background padding">
           <div>
-            <img src="./assets/architect-checking-new-project_23-2148242920.jpg" alt="" class="image" />
+            <img
+              src="./assets/architect-checking-new-project_23-2148242920.jpg"
+              alt=""
+              class="image"
+            />
           </div>
-          <div></div>
-          <div></div>
+          <div>
+            <h2 class="first-font text subtitle">Architecture Agency</h2>
+          </div>
+          <div>
+            <div class="flex-icons">
+              <img src="./assets/facebook.png" alt="" class="png social-icon" />
+              <img src="./assets/twitter.png" alt="" class="png social-icon" />
+              <img
+                src="./assets/instagram.png"
+                alt=""
+                class="png social-icon"
+              />
+              <img src="./assets/youtube.png" alt="" class="png social-icon" />
+              <img
+                src="./assets/google-plus.png"
+                alt=""
+                class="png social-icon"
+              />
+            </div>
+          </div>
         </section>
       </main>
     </div>
