--- a/template-1/index.html
+++ b/template-1/index.html
@@ -81,7 +81,7 @@
             />
           </div>
           <div>
-            <h2 class="first-font text subtitle">Architecture Agency</h2>
+            <h2 class="first-font subtitle">Architecture Agency</h2>
           </div>
           <div>
             <div class="flex-icons">
@@ -91,6 +91,7 @@
                 src="./assets/instagram.png"
                 alt=""
                 class="png social-icon"
+                style="width: 23px; height: 23px"
               />
               <img src="./assets/youtube.png" alt="" class="png social-icon" />
               <img
