--- a/template-1/index.html
+++ b/template-1/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <main class="flex">
-        <section>
+        <section class="size-flex">
           <article>
             <h1 class="first-font">
               Architectural Design
@@ -72,7 +72,7 @@
             </div>
           </article>
         </section>
-        <section class="orange-background padding">
+        <section class="orange-background padding size-flex">
           <div>
             <img
               src="./assets/architect-checking-new-project_23-2148242920.jpg"
