add new template

--- a/template-1/index.html
+++ b/template-1/index.html
@@ -43,7 +43,7 @@
             <div class="cards">
               <div class="card orange-background">
                 <img
-                  src="./assets/building.png"
+                  src="./assets/icons/building.png"
                   alt="build icon"
                   class="size png"
                 />
@@ -53,7 +53,7 @@
             <div class="cards">
               <div class="card orange-background">
                 <img
-                  src="./assets/architeture-project.png"
+                  src="./assets/icons/architeture-project.png"
                   alt="project architeture icon"
                   class="size png"
                 />
@@ -63,7 +63,7 @@
             <div class="cards">
               <div class="card orange-background">
                 <img
-                  src="./assets/future-building.png"
+                  src="./assets/icons/future-building.png"
                   alt="building icon"
                   class="size png"
                 />
@@ -85,17 +85,17 @@
           </div>
           <div>
             <div class="flex-icons">
-              <img src="./assets/facebook.png" alt="" class="png social-icon" />
-              <img src="./assets/twitter.png" alt="" class="png social-icon" />
+              <img src="./assets/icons/facebook.png" alt="" class="png social-icon" />
+              <img src="./assets/icons/twitter.png" alt="" class="png social-icon" />
               <img
-                src="./assets/instagram.png"
+                src="./assets/icons/instagram.png"
                 alt=""
                 class="png social-icon"
                 style="width: 23px; height: 23px"
               />
-              <img src="./assets/youtube.png" alt="" class="png social-icon" />
+              <img src="./assets/icons/youtube.png" alt="" class="png social-icon" />
               <img
-                src="./assets/google-plus.png"
+                src="./assets/icons/google-plus.png"
                 alt=""
                 class="png social-icon"
               />
