--- a/template-3/index.html
+++ b/template-3/index.html
@@ -1,1 +1,42 @@
-<!-- https://nicepage.com/st/72910/high-performance-buildings-website-template -->
+<!-- https://nicepage.com/ht/1292336/architecture-design-agency-html-template -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Architecture Design Agency</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <article class="flex">
+      <section id="black">
+        <div id="div-img">
+          <img
+            src="./assets/fgg.jpg"
+            alt="middle aged business man hard hat"
+            class="circle"
+          />
+        </div>
+        <hr />
+        <h2>We are an architecture design agency</h2>
+        <p>
+          You may be looking for an architecture design services firm or
+          architecture design company for residential projects. Our Studio is an
+          architecture design company that can give you the best designs that
+          you can ever think of.
+        </p>
+        <a href="https://nicepage.cc/" target="_blank" class="btn"
+          ><strong>LEARN MORE</strong></a
+        >
+      </section>
+      <section>
+        <div>
+          <img src="./assets/hghg.jpg" alt="" />
+          <img src="./assets/kll.jpg" alt="" />
+        </div>
+      </section>
+    </article>
+  </body>
+</html>
