--- a/template-3/index.html
+++ b/template-3/index.html
@@ -1,4 +1,4 @@
-<!-- https://nicepage.com/ht/1292336/architecture-design-agency-html-template -->
+<!-- https://nicepage.com/html-templates/preview/architecture-design-agency-1292336?device=desktop -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,24 +12,26 @@
   <body>
     <article class="flex">
       <section id="black">
-        <div id="div-img">
-          <img
-            src="./assets/fgg.jpg"
-            alt="middle aged business man hard hat"
-            class="circle"
-          />
+        <div>
+          <div id="div-img">  
+            <img
+              src="./assets/fgg.jpg"
+              alt="middle aged business man hard hat"
+              class="circle"
+            />
+          </div>
+          <hr />
+          <h2>We are an architecture design agency</h2>
+          <p>
+            You may be looking for an architecture design services firm or
+            architecture design company for residential projects. Our Studio is
+            an architecture design company that can give you the best designs
+            that you can ever think of.
+          </p>
+          <a href="https://nicepage.cc/" target="_blank" class="btn"
+            ><strong>LEARN MORE</strong></a
+          >
         </div>
-        <hr />
-        <h2>We are an architecture design agency</h2>
-        <p>
-          You may be looking for an architecture design services firm or
-          architecture design company for residential projects. Our Studio is an
-          architecture design company that can give you the best designs that
-          you can ever think of.
-        </p>
-        <a href="https://nicepage.cc/" target="_blank" class="btn"
-          ><strong>LEARN MORE</strong></a
-        >
       </section>
       <section>
         <div>
@@ -38,5 +40,11 @@
         </div>
       </section>
     </article>
+    <p class="link">
+      Image from
+      <a href="https://www.freepik.com/photos/background" target="_blank"
+        >Freepik</a
+      >
+    </p>
   </body>
 </html>
