--- a/template-3/index.html
+++ b/template-3/index.html
@@ -12,26 +12,24 @@
   <body>
     <article class="flex">
       <section id="black">
-        <div>
-          <div id="div-img">  
-            <img
-              src="./assets/fgg.jpg"
-              alt="middle aged business man hard hat"
-              class="circle"
-            />
-          </div>
-          <hr />
-          <h2>We are an architecture design agency</h2>
-          <p>
-            You may be looking for an architecture design services firm or
-            architecture design company for residential projects. Our Studio is
-            an architecture design company that can give you the best designs
-            that you can ever think of.
-          </p>
-          <a href="https://nicepage.cc/" target="_blank" class="btn"
-            ><strong>LEARN MORE</strong></a
-          >
+        <div id="div-img">
+          <img
+            src="./assets/fgg.jpg"
+            alt="middle aged business man hard hat"
+            class="circle"
+          />
         </div>
+        <hr />
+        <h2>We are an architecture design agency</h2>
+        <p>
+          You may be looking for an architecture design services firm or
+          architecture design company for residential projects. Our Studio is an
+          architecture design company that can give you the best designs that
+          you can ever think of.
+        </p>
+        <a href="https://nicepage.cc/" target="_blank" class="btn"
+          ><strong>LEARN MORE</strong></a
+        >
       </section>
       <section>
         <div>
